; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_ipr.c_ipr_set_sup_dev_dflt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_ipr.c_ipr_set_sup_dev_dflt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipr_supported_device = type { i32, i64, i32, i32 }
%struct.ipr_std_inq_vpids = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipr_supported_device*, %struct.ipr_std_inq_vpids*)* @ipr_set_sup_dev_dflt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipr_set_sup_dev_dflt(%struct.ipr_supported_device* %0, %struct.ipr_std_inq_vpids* %1) #0 {
  %3 = alloca %struct.ipr_supported_device*, align 8
  %4 = alloca %struct.ipr_std_inq_vpids*, align 8
  store %struct.ipr_supported_device* %0, %struct.ipr_supported_device** %3, align 8
  store %struct.ipr_std_inq_vpids* %1, %struct.ipr_std_inq_vpids** %4, align 8
  %5 = load %struct.ipr_supported_device*, %struct.ipr_supported_device** %3, align 8
  %6 = call i32 @memset(%struct.ipr_supported_device* %5, i32 0, i32 24)
  %7 = load %struct.ipr_supported_device*, %struct.ipr_supported_device** %3, align 8
  %8 = getelementptr inbounds %struct.ipr_supported_device, %struct.ipr_supported_device* %7, i32 0, i32 3
  %9 = load %struct.ipr_std_inq_vpids*, %struct.ipr_std_inq_vpids** %4, align 8
  %10 = call i32 @memcpy(i32* %8, %struct.ipr_std_inq_vpids* %9, i32 4)
  %11 = load %struct.ipr_supported_device*, %struct.ipr_supported_device** %3, align 8
  %12 = getelementptr inbounds %struct.ipr_supported_device, %struct.ipr_supported_device* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  %13 = call i32 @cpu_to_be16(i32 24)
  %14 = load %struct.ipr_supported_device*, %struct.ipr_supported_device** %3, align 8
  %15 = getelementptr inbounds %struct.ipr_supported_device, %struct.ipr_supported_device* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 8
  %16 = load %struct.ipr_supported_device*, %struct.ipr_supported_device** %3, align 8
  %17 = getelementptr inbounds %struct.ipr_supported_device, %struct.ipr_supported_device* %16, i32 0, i32 1
  store i64 0, i64* %17, align 8
  ret void
}

declare dso_local i32 @memset(%struct.ipr_supported_device*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, %struct.ipr_std_inq_vpids*, i32) #1

declare dso_local i32 @cpu_to_be16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
